--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <div class="column">
                         <div class="row">
                             <div class="column medium-2">
-                                <img width=64 height=64 src="./images/Azure Active Directory.png">
+                                <img width=64 height=64 src="./images/Sharepoint.png">
                             </div>
                             <div class="column medium-10">
                                 <h3 class="text-heading4">
@@ -49,7 +49,7 @@
                 <div class="column">
                     <div class="row">
                         <div class="column medium-2">
-                            <img width=64 height=64 src="./images/Azure Active Directory.png">
+                            <img width=64 height=64 src="./images/Azure SDK.png">
                         </div>
                         <div class="column medium-10">
                             <h3 class="text-heading4">
@@ -62,7 +62,7 @@
                 <div class="column">
                     <div class="row">
                         <div class="column medium-2">
-                            <img width=64 height=64 src="./images/Azure SQL Database (generic).png">
+                            <img width=64 height=64 src="./images/Visual Studio Team Services_COLOR.png">
                         </div>
                         <div class="column medium-10">
                             <h3 class="text-heading4">
@@ -75,7 +75,7 @@
                 <div class="column">
                     <div class="row">
                         <div class="column medium-2">
-                            <img width=64 height=64 src="./images/Azure SQL Database (generic).png">
+                            <img width=64 height=64 src="./images/Device OS.png">
                         </div>
                         <div class="column medium-10">
                             <h3 class="text-heading4">
@@ -88,7 +88,7 @@
                 <div class="column">
                     <div class="row">
                         <div class="column medium-2">
-                            <img width=64 height=64 src="./images/Azure SQL Database (generic).png">
+                            <img width=64 height=64 src="./images/Web server.png">
                         </div>
                         <div class="column medium-10">
                             <h3 class="text-heading4">
@@ -114,7 +114,7 @@
                 <div class="column">
                     <div class="row">
                         <div class="column medium-2">
-                            <img width=64 height=64 src="./images/Azure SQL Database (generic).png">
+                            <img width=64 height=64 src="./images/Web.png">
                         </div>
                         <div class="column medium-10">
                             <h3 class="text-heading4">
@@ -147,7 +147,7 @@
                 <div class="column">
                     <div class="row">
                         <div class="column medium-2">
-                            <img width=64 height=64 src="./images/Azure Active Directory.png">
+                            <img width=64 height=64 src="./images/Azure Security Center.png">
                         </div>
                         <div class="column medium-10">
                             <h3 class="text-heading4">
@@ -220,7 +220,7 @@
                 <div class="column">
                     <div class="row">
                         <div class="column medium-2">
-                            <img width=64 height=64 src="./images/Azure SQL Database (generic).png">
+                            <img width=64 height=64 src="./images/Azure Backup_COLOR.png">
                         </div>
                         <div class="column medium-10">
                             <h3 class="text-heading4">
@@ -233,7 +233,7 @@
                 <div class="column">
                     <div class="row">
                         <div class="column medium-2">
-                            <img width=64 height=64 src="./images/Azure SQL Database (generic).png">
+                            <img width=64 height=64 src="./images/Bot Services.png">
                         </div>
                         <div class="column medium-10">
                             <h3 class="text-heading4">
@@ -259,7 +259,7 @@
                 <div class="column">
                     <div class="row">
                         <div class="column medium-2">
-                            <img width=64 height=64 src="./images/Azure SQL Database (generic).png">
+                            <img width=64 height=64 src="./images/Azure App Service - Azure API Apps.png">
                         </div>
                         <div class="column medium-10">
                             <h3 class="text-heading4">
