Changed M365 tech sales team's icon

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         </div>
         <div class="row">
             <div class="column medium-2 text-center">
-                <img width="64" height="64" src="./images/Alerts.png">
+                <img width="64" height="64" src="./images/MS.png">
             </div>
             <div class="column medium-10 text">
                 <h3>Microsoft 365 テクニカル セールス チーム フォーラム</h3>
