added ASMS link and description

--- a/index.html
+++ b/index.html
@@ -2,10 +2,12 @@
 <html class="ja ja-jp" lang="ja">
 
 <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <title>日本マイクロソフト サポート情報</title>
+    <meta name="description" content="日本マイクロソフトの各製品およびサービスのサポート チーム ブログやフォーラムなどをまとめたページです。" />
+    <meta http-equiv="Content-Script-Type" content="text/javascript" />
+    <meta http-equiv="Content-Style-Type" content="text/css" />
     <link href="./core.css" rel="stylesheet" />
-
 </head>
 
 <body id="top">
@@ -192,9 +194,9 @@
                     </div>
                     <div class="column medium-10">
                         <h3 class="text-heading4">
-                            Azure Subscription Management Support Team
+                            <a href="https://social.msdn.microsoft.com/Forums/ja-JP/home?forum=jpazblsb">Azure Subscription Management Support Team</a>
                         </h3>
-                        <p>近日公開予定</p>
+                        <p>日本 Microsoft のサポート チームから Azure の課金・サブスクリプションについて情報をお届けします。</p>
                     </div>
                 </div>
             </div>
