--- a/index.html
+++ b/index.html
@@ -66,10 +66,11 @@
             <div class="card card-palette03 card-size3 card-shadow">
                 <div class="row row-middled-flex">
                     <div class="column medium-3 text-center">
-                        <p class="text-heading4">新元号対応への取り組みに<br/>関するお知らせ</p>
+                        <p class="text-heading4">新元号対応への取り組みに<br />関するお知らせ</p>
                     </div>
                     <div class="column medium-9 left-border-slate08 left-padding-size4">
-                        <p>2019 年 5 月、新元号への切り替えが行われます。ご利用いただいている製品によっては、新元号対応のために、製品のアップデートおよび検証が必要になる場合がございます。詳しくは、特設のサポート技術情報をご確認ください。
+                        <p>2019 年 5
+                            月、新元号への切り替えが行われます。ご利用いただいている製品によっては、新元号対応のために、製品のアップデートおよび検証が必要になる場合がございます。詳しくは、特設のサポート技術情報をご確認ください。
                         </p>
                         <p><a href="http://aka.ms/jperaguide">http://aka.ms/jperaguide</a></p>
                     </div>
@@ -165,7 +166,6 @@
                 </div>
             </div>
         </div>
-        </div>
     </section>
     <section class="section">
         <div class="row column">
@@ -194,7 +194,8 @@
                     </div>
                     <div class="column medium-10">
                         <h3 class="text-heading4">
-                            <a href="https://social.msdn.microsoft.com/Forums/ja-JP/home?forum=jpazblsb">Azure Subscription Management Support Team</a>
+                            <a href="https://social.msdn.microsoft.com/Forums/ja-JP/home?forum=jpazblsb">Azure
+                                Subscription Management Support Team</a>
                         </h3>
                         <p>日本 Microsoft のサポート チームから Azure の課金・サブスクリプションについて情報をお届けします。</p>
                     </div>
@@ -509,7 +510,6 @@
             </div>
         </div>
     </section>
-
 </body>
 
 </html>
