Added Japan Security Team

--- a/index.html
+++ b/index.html
@@ -355,6 +355,19 @@
                     </div>
                 </div>
             </div>
+            <div class="column">
+                <div class="row">
+                    <div class="column medium-2 text-center">
+                        <img width=64 height=64 src="./images/SecurityLogo.jpg">
+                    </div>
+                    <div class="column medium-10">
+                        <h3 class="text-heading4">
+                            <a href="https://aka.ms/jpsecurity/">日本のセキュリティチーム (Japan Security Team)</a>
+                        </h3>
+                        <p>日本のセキュリティチームの日々の活動やマイクロソフトのセキュリティへの取り組み、話題のセキュリティ問題、マルウェア、脆弱性などなど、さまざまなセキュリティに関する情報を発信しています。</p>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
 
