added links to archive

--- a/index.html
+++ b/index.html
@@ -69,8 +69,7 @@
                         <p class="text-heading4">新元号対応への取り組みに<br />関するお知らせ</p>
                     </div>
                     <div class="column medium-9 left-border-slate08 left-padding-size4">
-                        <p>2019 年 5
-                            月、新元号への切り替えが行われます。ご利用いただいている製品によっては、新元号対応のために、製品のアップデートおよび検証が必要になる場合がございます。詳しくは、特設のサポート技術情報をご確認ください。
+                        <p>2019 年 5 月、新元号への切り替えが行われます。ご利用いただいている製品によっては、新元号対応のために、製品のアップデートおよび検証が必要になる場合がございます。詳しくは、特設のサポート技術情報をご確認ください。
                         </p>
                         <p><a href="http://aka.ms/jperaguide">http://aka.ms/jperaguide</a></p>
                     </div>
@@ -184,6 +183,7 @@
                             <a href="https://aka.ms/jpaztech">Japan Azure IaaS and Networking Support Team</a>
                         </h3>
                         <p>Azure IaaS / Networking のテクノロジーについて、日本マイクロソフトのサポート チームより情報を発信します。</p>
+                        <p><a href="https://blogs.technet.microsoft.com/jpaztech/">以前のブログ (アーカイブ) はこちら</a></p>
                     </div>
                 </div>
             </div>
@@ -198,6 +198,7 @@
                                 Subscription Management Support Team</a>
                         </h3>
                         <p>日本 Microsoft のサポート チームから Azure の課金・サブスクリプションについて情報をお届けします。</p>
+                        <p><a href="https://blogs.msdn.microsoft.com/dsazurejp/">以前のブログ (アーカイブ) はこちら</a></p>
                     </div>
                 </div>
             </div>
@@ -240,6 +241,7 @@
                                 サポートチーム フォーラム</a>
                         </h3>
                         <p>Azure PaaS サービスに関する話題を中心に、よくお問い合わせをいただく情報や、技術者のみなさまに役立つ情報を配信いたします。</p>
+                        <p><a href="https://blogs.msdn.microsoft.com/jpcie/">以前のブログ (アーカイブ) はこちら</a></p>
                     </div>
                 </div>
             </div>
@@ -269,8 +271,8 @@
                         <h3 class="text-heading4">
                             <a href="https://aka.ms/jpazureid">Azure Identity サポート チーム</a>
                         </h3>
-                        <p>Azure AD、Active Directory Federation Service, Azure Active Directory Connect などを扱うサポート チームです。
-                        </p>
+                        <p>Azure AD、Active Directory Federation Service, Azure Active Directory Connect などを扱うサポート チームです。</p>
+                        <p><a href="https://blogs.technet.microsoft.com/jpazureid/">以前のブログ (アーカイブ) はこちら</a></p>
                     </div>
                 </div>
             </div>
