added a link to archived SQL support team blog

--- a/index.html
+++ b/index.html
@@ -498,6 +498,7 @@
                                 Japan BI Data Platform(SQL) Support Team</a>
                         </h3>
                         <p>Microsoft Japan BI Data Platform(SQL) 技術サポートチームが、良くお問合せ頂くような情報をサポートトピックとして配信するフォーラムです。</p>
+                        <p><a href="https://blogs.msdn.microsoft.com/jpsql/">以前のブログ (アーカイブ) はこちら</a></p>
                     </div>
                 </div>
             </div>
