added a lik to D365 Finance and Operations/AX support

--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
                             <a href="https://social.msdn.microsoft.com/Forums/ja-JP/home?forum=jpazblsb">Azure
                                 Subscription Management Support Team</a>
                         </h3>
-                        <p>日本 Microsoft のサポート チームから Azure の課金・サブスクリプションについて情報をお届けします。</p>
+                        <p>日本 Microsoft のサポート チームから Azure の課金およびサブスクリプションについて情報をお届けします。</p>
                         <p><a href="https://blogs.msdn.microsoft.com/dsazurejp/">以前のブログ (アーカイブ) はこちら</a></p>
                     </div>
                 </div>
@@ -521,6 +521,19 @@
                             <a href="http://aka.ms/dynamics-support-forum">Dynamics サポート</a>
                         </h3>
                         <p>Dynamics 365 Customer Engagement サポート チームのサポート フォーラムです。</p>
+                    </div>
+                </div>
+            </div>
+            <div class="column">
+                <div class="row">
+                    <div class="column medium-2 text-center">
+                        <img width=64 height=64 src="./images/dynamics.png">
+                    </div>
+                    <div class="column medium-10">
+                        <h3 class="text-heading4">
+                            <a href="https://blogs.msdn.microsoft.com/axjapan/">Dynamics 365 Finance and Operations/AX サポートチーム</a>
+                        </h3>
+                        <p>Dynamics 365 Finance and Operations および、Dynamics AX に関して、よくお問い合わせをいただく情報や、技術者のみなさまに役立つ情報を配信いたします。</p>
                     </div>
                 </div>
             </div>
