Changed some description regarding era and dynamics

--- a/index.html
+++ b/index.html
@@ -66,11 +66,10 @@
             <div class="card card-palette03 card-size3 card-shadow">
                 <div class="row row-middled-flex">
                     <div class="column medium-3 text-center">
-                        <p class="text-heading4">新元号対応への取り組みに<br />関するお知らせ</p>
+                        <p class="text-heading4">新元号 (令和) 対応への取り組みに関するお知らせ</p>
                     </div>
                     <div class="column medium-9 left-border-slate08 left-padding-size4">
-                        <p>2019 年 5 月、新元号への切り替えが行われます。ご利用いただいている製品によっては、新元号対応のために、製品のアップデートおよび検証が必要になる場合がございます。詳しくは、特設のサポート技術情報をご確認ください。
-                        </p>
+                        <p>2019 年 5 月の改元に伴い、ご利用いただいている製品によっては、新元号対応のために、製品のアップデートおよび検証が必要になる場合がございます。詳しくは、特設のサポート技術情報をご確認ください。</p>
                         <p><a href="http://aka.ms/jperaguide">http://aka.ms/jperaguide</a></p>
                     </div>
                 </div>
@@ -114,8 +113,7 @@
                     </div>
                     <div class="column medium-10">
                         <h3 class="text-heading4">
-                            <a href="https://social.msdn.microsoft.com/Forums/ja-JP/home?forum=exchangeteamjp">Exchange
-                                & Outlook サポートチーム フォーラム</a>
+                            <a href="https://social.msdn.microsoft.com/Forums/ja-JP/home?forum=exchangeteamjp">Exchange & Outlook サポート チーム フォーラム</a>
                         </h3>
                         <p>オンプレミス Exchange Server 、Exchange Online 及び Outlook をご利用いただく上で、皆様よりご要望が多い情報を配信します。</p>
                     </div>
@@ -128,8 +126,7 @@
                     </div>
                     <div class="column medium-10">
                         <h3 class="text-heading4">
-                            <a href="https://social.msdn.microsoft.com/Forums/ja-JP/home?forum=sharepointsupportteamja">SharePoint
-                                サポートチーム フォーラム</a>
+                            <a href="https://social.msdn.microsoft.com/Forums/ja-JP/home?forum=sharepointsupportteamja">SharePoint サポート チーム フォーラム</a>
                         </h3>
                         <p>SharePoint 技術サポート部門より、よくお問い合わせをいただく情報をサポートトピックとして、皆様よりご要望が多い情報を配信します。</p>
                     </div>
@@ -142,8 +139,7 @@
                     </div>
                     <div class="column medium-10">
                         <h3 class="text-heading4">
-                            <a href="https://social.msdn.microsoft.com/Forums/ja-JP/home?forum=officesupportteamja">Office
-                                サポート チーム フォーラム</a>
+                            <a href="https://social.msdn.microsoft.com/Forums/ja-JP/home?forum=officesupportteamja">Office サポート チーム フォーラム</a>
                         </h3>
                         <p>Office クライアント製品に関して、よくお問い合わせをいただく情報をサポートトピックとして、皆様よりご要望が多い情報を配信します。</p>
                     </div>
@@ -156,8 +152,7 @@
                     </div>
                     <div class="column medium-10">
                         <h3 class="text-heading4">
-                            <a href="https://social.msdn.microsoft.com/Forums/ja-jp/home?forum=jpteamssfb">Microsoft
-                                Japan Unified Communication Support Team</a>
+                            <a href="https://social.msdn.microsoft.com/Forums/ja-jp/home?forum=jpteamssfb">Microsoft Japan Unified Communication Support Team</a>
                         </h3>
                         <p>日本マイクロソフト Unified Communication サポート チームによる Microsoft Teams と Skype for Business (Lync)
                             関連フォーラムです。</p>
@@ -194,8 +189,7 @@
                     </div>
                     <div class="column medium-10">
                         <h3 class="text-heading4">
-                            <a href="https://social.msdn.microsoft.com/Forums/ja-JP/home?forum=jpazblsb">Azure
-                                Subscription Management Support Team</a>
+                            <a href="https://social.msdn.microsoft.com/Forums/ja-JP/home?forum=jpazblsb">Azure Subscription Management Support Team</a>
                         </h3>
                         <p>日本 Microsoft のサポート チームから Azure の課金およびサブスクリプションについて情報をお届けします。</p>
                         <p><a href="https://blogs.msdn.microsoft.com/dsazurejp/">以前のブログ (アーカイブ) はこちら</a></p>
@@ -209,8 +203,7 @@
                     </div>
                     <div class="column medium-10">
                         <h3 class="text-heading4">
-                            <a href="https://social.technet.microsoft.com/Forums/ja-JP/home?forum=jpabrs">Japan Azure
-                                Backup and Recovery Services</a>
+                            <a href="https://social.technet.microsoft.com/Forums/ja-JP/home?forum=jpabrs">Japan Azure Backup and Recovery Services</a>
                         </h3>
                         <p>Azure Backup と Azure Site Recovery に関するサポート チームのフォーラムです。</p>
                     </div>
@@ -223,8 +216,7 @@
                     </div>
                     <div class="column medium-10">
                         <h3 class="text-heading4">
-                            <a href="https://social.technet.microsoft.com/Forums/ja-JP/home?forum=jpama">Japan Azure
-                                Monitoring and Automation</a>
+                            <a href="https://social.technet.microsoft.com/Forums/ja-JP/home?forum=jpama">Japan Azure Monitoring and Automation</a>
                         </h3>
                         <p>OMS（Log Analytics）や Automation に関するサポート チームのフォーラムです。</p>
                     </div>
@@ -237,8 +229,7 @@
                     </div>
                     <div class="column medium-10">
                         <h3 class="text-heading4">
-                            <a href="https://social.msdn.microsoft.com/Forums/ja-JP/home?forum=Jpcie">Japan Azure PaaS
-                                サポートチーム フォーラム</a>
+                            <a href="https://social.msdn.microsoft.com/Forums/ja-JP/home?forum=Jpcie">Japan Azure PaaS サポート チーム フォーラム</a>
                         </h3>
                         <p>Azure PaaS サービスに関する話題を中心に、よくお問い合わせをいただく情報や、技術者のみなさまに役立つ情報を配信いたします。</p>
                         <p><a href="https://blogs.msdn.microsoft.com/jpcie/">以前のブログ (アーカイブ) はこちら</a></p>
@@ -253,12 +244,9 @@
                     <div class="column medium-10">
                         <h3 class="text-heading4">
                             <a
-                                href="https://social.msdn.microsoft.com/forums/ja-jp/home?forum=azurebotsupportteamja&filter=alltypes&sort=lastpostdesc">Azure
-                                Bot Service
-                                サポートチーム</a>
+                                href="https://social.msdn.microsoft.com/forums/ja-jp/home?forum=azurebotsupportteamja&filter=alltypes&sort=lastpostdesc">Azure Bot Service サポート チーム</a>
                         </h3>
-                        <p>「Azure Bot Service サポートチーム」フォーラムは、Azure Bot Service
-                            サポートチームより、よくお問い合わせをいただく情報をサポートトピックとして、皆様よりご要望が多い情報を配信します。</p>
+                        <p>「Azure Bot Service サポート チーム」フォーラムは、Azure Bot Service サポート チームより、よくお問い合わせをいただく情報をサポート トピックとして、皆様よりご要望が多い情報を配信します。</p>
                     </div>
                 </div>
             </div>
@@ -292,11 +280,9 @@
                     </div>
                     <div class="column medium-10">
                         <h3 class="text-heading4">
-                            <a href="https://social.technet.microsoft.com/Forums/ja-Jp/home?forum=Wcsupportja">Japan
-                                Windows Commercial Support</a>
+                            <a href="https://social.technet.microsoft.com/Forums/ja-Jp/home?forum=Wcsupportja">Japan Windows Commercial Support</a>
                         </h3>
-                        <p>「Japan Windows Commercial Support」フォーラムは、Windows のプラットフォーム サポート (Windows Server OS や Windows
-                            10 などの Client OS、Network、Active Directory) の技術情報、トラブルシューティング情報、皆様よりご要望・お問い合わせの多い情報について配信します。
+                        <p>「Japan Windows Commercial Support」フォーラムは、Windows のプラットフォーム サポート (Windows Server OS や Windows 10 などの Client OS、Network、Active Directory) の技術情報、トラブルシューティング情報、皆様よりご要望・お問い合わせの多い情報について配信します。
                         </p>
                     </div>
                 </div>
@@ -322,10 +308,9 @@
                     </div>
                     <div class="column medium-10">
                         <h3 class="text-heading4">
-                            <a href="https://social.technet.microsoft.com/Forums/ja-JP/home?forum=systemcenterjp">System
-                                Center Team Japan</a>
+                            <a href="https://social.technet.microsoft.com/Forums/ja-JP/home?forum=systemcenterjp">System Center Team Japan</a>
                         </h3>
-                        <p>System Center サポートチームのサポート フォーラムです。</p>
+                        <p>System Center サポート チームのサポート フォーラムです。</p>
                     </div>
                 </div>
             </div>
@@ -336,10 +321,9 @@
                     </div>
                     <div class="column medium-10">
                         <h3 class="text-heading4">
-                            <a href="https://social.technet.microsoft.com/Forums/ja-JP/home?forum=jpidentitymanager">Identity
-                                Manager</a>
+                            <a href="https://social.technet.microsoft.com/Forums/ja-JP/home?forum=jpidentitymanager">Identity Manager</a>
                         </h3>
-                        <p>Identity Manager サポートチームのサポート フォーラムです。</p>
+                        <p>Identity Manager サポート チームのサポート フォーラムです。</p>
                     </div>
                 </div>
             </div>
@@ -350,8 +334,7 @@
                     </div>
                     <div class="column medium-10">
                         <h3 class="text-heading4">
-                            <a href="https://social.msdn.microsoft.com/Forums/ja-JP/home?forum=jpsccmwsus">Japan SCCM &
-                                WSUS Support Team</a>
+                            <a href="https://social.msdn.microsoft.com/Forums/ja-JP/home?forum=jpsccmwsus">Japan SCCM & WSUS Support Team</a>
                         </h3>
                         <p>System Center Configuration Manager (SCCM) と WSUS に関する情報提供について、本フォーラムにてご案内いたします。</p>
                     </div>
@@ -364,9 +347,9 @@
                     </div>
                     <div class="column medium-10">
                         <h3 class="text-heading4">
-                            <a href="https://aka.ms/jpsecurity/">日本のセキュリティチーム (Japan Security Team)</a>
+                            <a href="https://aka.ms/jpsecurity/">日本のセキュリティ チーム (Japan Security Team)</a>
                         </h3>
-                        <p>日本のセキュリティチームの日々の活動やマイクロソフトのセキュリティへの取り組み、話題のセキュリティ問題、マルウェア、脆弱性などなど、さまざまなセキュリティに関する情報を発信しています。</p>
+                        <p>日本のセキュリティ チームの日々の活動やマイクロソフトのセキュリティへの取り組み、話題のセキュリティ問題、マルウェア、脆弱性などなど、さまざまなセキュリティに関する情報を発信しています。</p>
                     </div>
                 </div>
             </div>
@@ -388,10 +371,9 @@
                     <div class="column medium-10">
                         <h3 class="text-heading4">
                             <a
-                                href="https://social.msdn.microsoft.com/Forums/ja-JP/home?forum=visualstudiosupportteamja">Visual
-                                Studio サポートチーム フォーラム</a>
+                                href="https://social.msdn.microsoft.com/Forums/ja-JP/home?forum=visualstudiosupportteamja">Visual Studio サポート チーム フォーラム</a>
                         </h3>
-                        <p>Visual Studio / .NET Framework 技術サポート部門より、よくお問い合わせをいただく情報をサポートトピックとして、皆様よりご要望が多い情報を配信します。</p>
+                        <p>Visual Studio / .NET Framework 技術サポート部門より、よくお問い合わせをいただく情報をサポート トピックとして、皆様よりご要望が多い情報を配信します。</p>
                     </div>
                 </div>
             </div>
@@ -402,11 +384,9 @@
                     </div>
                     <div class="column medium-10">
                         <h3 class="text-heading4">
-                            <a href="https://social.msdn.microsoft.com/Forums/ja-JP/home?forum=windowssdksupportteamja">Windows
-                                SDK サポートチーム フォーラム</a>
+                            <a href="https://social.msdn.microsoft.com/Forums/ja-JP/home?forum=windowssdksupportteamja">Windows SDK サポート チーム フォーラム</a>
                         </h3>
-                        <p>Windows のベース・テクノロジ、セキュリティ、ネットワーク、ユーザー インターフェースに関連する API
-                            を利用して、ソフトウェアを開発いただいております技術者の皆様に役立つ情報、ツール、サンプル コード等を随時ご紹介していきます。</p>
+                        <p>Windows のベース・テクノロジ、セキュリティ、ネットワーク、ユーザー インターフェースに関連する API を利用して、ソフトウェアを開発いただいております技術者の皆様に役立つ情報、ツール、サンプル コード等を随時ご紹介していきます。</p>
                     </div>
                 </div>
             </div>
@@ -417,10 +397,9 @@
                     </div>
                     <div class="column medium-10">
                         <h3 class="text-heading4">
-                            <a href="https://social.msdn.microsoft.com/forums/ja-jp/home?forum=aspnetsupportteamja">ASP.NET
-                                サポートチーム</a>
+                            <a href="https://social.msdn.microsoft.com/forums/ja-jp/home?forum=aspnetsupportteamja">ASP.NET サポート チーム</a>
                         </h3>
-                        <p>「ASP.NET サポートチーム」フォーラムは、ASP.NET サポートチームより、よくお問い合わせをいただく情報をサポートトピックとして、皆様よりご要望が多い情報を配信します。</p>
+                        <p>「ASP.NET サポート チーム」フォーラムは、ASP.NET サポート チームより、よくお問い合わせをいただく情報をサポート トピックとして、皆様よりご要望が多い情報を配信します。</p>
                     </div>
                 </div>
             </div>
@@ -431,8 +410,7 @@
                     </div>
                     <div class="column medium-10">
                         <h3 class="text-heading4">
-                            <a href="https://social.msdn.microsoft.com/Forums/ja-JP/home?forum=wdksupportteamja">Windows
-                                Driver Kit サポートチーム フォーラム</a>
+                            <a href="https://social.msdn.microsoft.com/Forums/ja-JP/home?forum=wdksupportteamja">Windows Driver Kit サポートチーム フォーラム</a>
                         </h3>
                         <p>WDK は、デバイス ドライバを開発するツールやサンプル コードがパッケージされた製品です。私たち WDK サポート チームは、今までに蓄積してきたノウハウを発信していきたいと思います。
                         </p>
@@ -455,11 +433,9 @@
                     </div>
                     <div class="column medium-10">
                         <h3 class="text-heading4">
-                            <a href="https://social.msdn.microsoft.com/forums/ja-jp/home?forum=edgeiesupportteamja">Edge/Internet
-                                Explorer (IE) サポートチーム</a>
+                            <a href="https://social.msdn.microsoft.com/forums/ja-jp/home?forum=edgeiesupportteamja">Edge/Internet Explorer (IE) サポート チーム</a>
                         </h3>
-                        <p>「Edge/Internet Explorer (IE)  サポートチーム」フォーラムは、Edge/Internet Explorer (IE)  
-                            サポートチームより、よくお問い合わせをいただく情報をサポートトピックとして、皆様よりご要望が多い情報を配信します。</p>
+                        <p>「Edge/Internet Explorer (IE)  サポート チーム」フォーラムは、Edge/Internet Explorer (IE) サポート チームより、よくお問い合わせをいただく情報をサポート トピックとして、皆様よりご要望が多い情報を配信します。</p>
                     </div>
                 </div>
             </div>
@@ -470,11 +446,9 @@
                     </div>
                     <div class="column medium-10">
                         <h3 class="text-heading4">
-                            <a href="https://social.msdn.microsoft.com/forums/ja-jp/home?forum=iissupportteamja">Internet
-                                Information Services (IIS) サポートチーム</a>
+                            <a href="https://social.msdn.microsoft.com/forums/ja-jp/home?forum=iissupportteamja">Internet Information Services (IIS) サポート チーム</a>
                         </h3>
-                        <p>「Internet Information Services (IIS) サポートチーム」 フォーラムは、Internet Information Services (IIS)
-                            サポートチームより、よくお問い合わせをいただく情報をサポートトピックとして、皆様よりご要望が多い情報を配信します。</p>
+                        <p>「Internet Information Services (IIS) サポート チーム」 フォーラムは、Internet Information Services (IIS) サポート チームより、よくお問い合わせをいただく情報をサポート トピックとして、皆様よりご要望が多い情報を配信します。</p>
                     </div>
                 </div>
             </div>
@@ -494,10 +468,9 @@
                     </div>
                     <div class="column medium-10">
                         <h3 class="text-heading4">
-                            <a href="https://social.technet.microsoft.com/Forums/ja-JP/home?forum=jpbidp">Microsoft
-                                Japan BI Data Platform(SQL) Support Team</a>
+                            <a href="https://social.technet.microsoft.com/Forums/ja-JP/home?forum=jpbidp">Microsoft Japan BI Data Platform(SQL) Support Team</a>
                         </h3>
-                        <p>Microsoft Japan BI Data Platform(SQL) 技術サポートチームが、良くお問合せ頂くような情報をサポートトピックとして配信するフォーラムです。</p>
+                        <p>Microsoft Japan BI Data Platform(SQL) 技術サポートチームが、良くお問合せ頂くような情報をサポート トピックとして配信するフォーラムです。</p>
                         <p><a href="https://blogs.msdn.microsoft.com/jpsql/">以前のブログ (アーカイブ) はこちら</a></p>
                     </div>
                 </div>
@@ -518,9 +491,9 @@
                     </div>
                     <div class="column medium-10">
                         <h3 class="text-heading4">
-                            <a href="http://aka.ms/dynamics-support-forum">Dynamics サポート</a>
+                            <a href="http://aka.ms/dynamics-support-forum">Dynamics 365 Customer Engagement/CRM サポート</a>
                         </h3>
-                        <p>Dynamics 365 Customer Engagement サポート チームのサポート フォーラムです。</p>
+                        <p>Dynamics 365 Customer Engagement (CRM) サポート チームのサポート フォーラムです</p>
                     </div>
                 </div>
             </div>
@@ -531,7 +504,7 @@
                     </div>
                     <div class="column medium-10">
                         <h3 class="text-heading4">
-                            <a href="https://blogs.msdn.microsoft.com/axjapan/">Dynamics 365 Finance and Operations/AX サポートチーム</a>
+                            <a href="https://blogs.msdn.microsoft.com/axjapan/">Dynamics 365 Finance and Operations/AX サポート チーム</a>
                         </h3>
                         <p>Dynamics 365 Finance and Operations および、Dynamics AX に関して、よくお問い合わせをいただく情報や、技術者のみなさまに役立つ情報を配信いたします。</p>
                     </div>
