--- a/index.html
+++ b/index.html
@@ -75,6 +75,32 @@
                 </div>
             </div>
         </div>
+        <div class="row column">
+            <div class="card card-palette09 card-size3 card-shadow">
+                <div class="row row-middled-flex">
+                    <div class="column medium-3 text-center">
+                        <p class="text-heading4">2019 年 7 月、8 月のサポート窓口休業のお知らせ</p>
+                    </div>
+                    <div class="column medium-9 left-border-slate08 left-padding-size4">
+                        <p>
+                            【休業日】<br/>
+                            　- 2019 年 7 月 4 日 (木) および 2019 年 8 月 16 日 (金)
+                        <p>
+                        <p>
+                            【休業する窓口】<br/>
+                            　- <u><a href="https://www.microsoft.com/ja-jp/services/Microsoft-Unified-Support.aspx">ユニファイド サポート</a></u><br/>
+                            　- <u><a href="https://www.microsoft.com/ja-jp/services/premier.aspx">Premier サポート</a></u><br/>
+                            　- <u><a href="https://www.microsoft.com/ja-jp/services/professional.aspx">プロフェッショナル サポート</a></u><br/>
+                            　- <u><a href="https://azure.microsoft.com/ja-jp/support/plans/">Azure (Basic/Developer/Standard/Professional Direct) サポート</a></u><br/>
+                            　- <u><a href="https://dynamics.microsoft.com/ja-jp/contact-us/">Dynamics 365 (Customer Engagement/Finance and Operations) サポート</a></u><br/>   
+                          </p>
+                          <p>ご迷惑をおかけするかと存じますが、何卒ご理解くださいますようお願いいたします。
+                          24 時間サポートのご契約をお持ちのお客様につきましては、上記休業日もサーバー ダウンなどの緊急度の高い案件 (深刻度 A) に関して対応をさせていただきます。
+                          </p>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
     <section class="section">
         <div class="row column">
@@ -89,9 +115,7 @@
             <div class="column medium-10 text">
                 <h3>Office 365 サポート チームからのお知らせ</h3>
                 <p>Office 365 サポート チームより既知の問題と回避策、また運用に役立つ Tips などを Microsoft コミュニティ内でご案内しています。</p>
-                <p><a class="arrowLink"
-                        href="http://answers.microsoft.com/ja-jp/profile/52cd367d-8f3a-49bf-b837-626160f23357#user-profile-tab-activity">Microsoft
-                        コミュニティはこちら</a></p>
+                <p><a href="http://answers.microsoft.com/ja-jp/profile/52cd367d-8f3a-49bf-b837-626160f23357#user-profile-tab-activity">Microsoft コミュニティはこちら</a></p>
             </div>
         </div>
         <div class="row">
@@ -101,8 +125,7 @@
             <div class="column medium-10 text">
                 <h3>Microsoft 365 テクニカル セールス チーム フォーラム</h3>
                 <p>このフォーラムでは、お客様に Office 365 などの Microsoft サービスをフル活用していただくための情報発信をしております。</p>
-                <p><a class="arrowLink"
-                        href="https://social.msdn.microsoft.com/Forums/ja-JP/home?forum=m365techjp">フォーラムはこちら</a></p>
+                <p><a href="https://social.msdn.microsoft.com/Forums/ja-JP/home?forum=m365techjp">フォーラムはこちら</a></p>
             </div>
         </div>
         <div class="row row-size2 medium-up-2">
@@ -261,6 +284,7 @@
                         </h3>
                         <p>Azure AD、Active Directory Federation Service, Azure Active Directory Connect などを扱うサポート チームです。</p>
                         <p><a href="https://blogs.technet.microsoft.com/jpazureid/">以前のブログ (アーカイブ) はこちら</a></p>
+                        <p><a href="https://techcommunity.microsoft.com/t5/Azure-Active-Directory-Identity/bg-p/Identity">米国の Azure Active Directory Identity Blog はこちら</a></p>
                     </div>
                 </div>
             </div>
