added another link to notice

--- a/index.html
+++ b/index.html
@@ -92,7 +92,8 @@
                             　- <u><a href="https://www.microsoft.com/ja-jp/services/premier.aspx">Premier サポート</a></u><br/>
                             　- <u><a href="https://www.microsoft.com/ja-jp/services/professional.aspx">プロフェッショナル サポート</a></u><br/>
                             　- <u><a href="https://azure.microsoft.com/ja-jp/support/plans/">Azure (Basic/Developer/Standard/Professional Direct) サポート</a></u><br/>
-                            　- <u><a href="https://dynamics.microsoft.com/ja-jp/contact-us/">Dynamics 365 (Customer Engagement/Finance and Operations) サポート</a></u><br/>   
+                            　- <u><a href="https://dynamics.microsoft.com/ja-jp/contact-us/">Dynamics 365 (Customer Engagement/Finance and Operations) サポート</a></u><br/>
+                            　- <u><a href="https://aka.ms/kuraso">クラウド ビジネス相談センター</a></u>
                           </p>
                           <p>ご迷惑をおかけするかと存じますが、何卒ご理解くださいますようお願いいたします。
                           24 時間サポートのご契約をお持ちのお客様につきましては、上記休業日もサーバー ダウンなどの緊急度の高い案件 (深刻度 A) に関して対応をさせていただきます。
