--- a/index.html
+++ b/index.html
@@ -123,9 +123,9 @@
                     </div>
                     <div class="column medium-10">
                         <h3 class="text-heading4">
-                            <a href="https://social.msdn.microsoft.com/Forums/ja-JP/home?forum=sharepointsupportteamja">SharePoint サポート チーム フォーラム</a>
+                            <a href="https://jpspsupport.github.io/blog/">SharePoint サポート チーム</a>
                         </h3>
-                        <p>SharePoint 技術サポート部門より、よくお問い合わせをいただく情報をサポートトピックとして、皆様よりご要望が多い情報を配信します。</p>
+                        <p>SharePoint 技術サポート チームより、よくお問い合わせをいただく情報や、技術者のみなさまに役立つ情報を配信いたします。</p>
                     </div>
                 </div>
             </div>
