--- a/index.html
+++ b/index.html
@@ -395,7 +395,7 @@
                     </div>
                     <div class="column medium-10">
                         <h3 class="text-heading4">
-                            <a href="https://social.msdn.microsoft.com/forums/ja-jp/home?forum=aspnetsupportteamja">ASP.NET サポート チーム</a>
+                            <a href="https://jpdsi.github.io/blog/">ASP.NET サポート チーム</a>
                         </h3>
                         <p>「ASP.NET サポート チーム」フォーラムは、ASP.NET サポート チームより、よくお問い合わせをいただく情報をサポート トピックとして、皆様よりご要望が多い情報を配信します。</p>
                     </div>
