Update Exchange & Outlook team

--- a/index.html
+++ b/index.html
@@ -110,9 +110,10 @@
                     </div>
                     <div class="column medium-10">
                         <h3 class="text-heading4">
-                            <a href="https://social.msdn.microsoft.com/Forums/ja-JP/home?forum=exchangeteamjp">Exchange & Outlook サポート チーム フォーラム</a>
+                            <a href="https://jpmessaging.github.io/blog/">Exchange & Outlook サポート</a>
                         </h3>
                         <p>オンプレミス Exchange Server 、Exchange Online 及び Outlook をご利用いただく上で、皆様よりご要望が多い情報を配信します。</p>
+                        <p><a href="https://social.msdn.microsoft.com/Forums/ja-JP/home?forum=exchangeteamjp">以前のブログ (アーカイブ) はこちら</a></p>
                     </div>
                 </div>
             </div>
