--- a/index.html
+++ b/index.html
@@ -227,9 +227,10 @@
                     </div>
                     <div class="column medium-10">
                         <h3 class="text-heading4">
-                            <a href="https://social.msdn.microsoft.com/Forums/ja-JP/home?forum=Jpcie">Japan Azure PaaS サポート チーム フォーラム</a>
+                            <a href="https://aka.ms/jpazpaasblog">Japan Azure PaaS サポート チーム</a>
                         </h3>
                         <p>Azure PaaS サービスに関する話題を中心に、よくお問い合わせをいただく情報や、技術者のみなさまに役立つ情報を配信いたします。</p>
+                        <p><a href="https://social.msdn.microsoft.com/Forums/ja-JP/home?forum=Jpcie">以前のフォーラム (アーカイブ) はこちら</a></p>
                         <p><a href="https://blogs.msdn.microsoft.com/jpcie/">以前のブログ (アーカイブ) はこちら</a></p>
                     </div>
                 </div>
