--- a/index.html
+++ b/index.html
@@ -63,6 +63,32 @@
     </div>
     <div class="section section-palette03 section-half-palette01-half-palette01">
         <div class="row column">
+            <div class="card card-palette09 card-size3 card-shadow">
+                <div class="row row-middled-flex">
+                    <div class="column medium-3 text-center">
+                        <p class="text-heading4">2020 年 7 月、8 月のサポート窓口休業のお知らせ</p>
+                    </div>
+                    <div class="column medium-9 left-border-slate08 left-padding-size4">
+                        <p>
+                            【休業日】<br/>
+                            　- 2020 年 7 月 16 日 (木) 12:00 以降<br/>
+                            　- 2020 年 8 月 18 日 (火) 12:00 以降
+                        <p>
+                        <p>
+                            【休業する窓口】<br/>
+                            　- <u><a href="https://www.microsoft.com/ja-jp/services/Microsoft-Unified-Support.aspx">ユニファイド サポート</a></u><br/>
+                            　- <u><a href="https://www.microsoft.com/ja-jp/services/premier.aspx">Premier サポート</a></u><br/>
+                            　- <u><a href="https://www.microsoft.com/ja-jp/services/professional.aspx">プロフェッショナル サポート</a></u><br/>
+                            　- <u><a href="https://azure.microsoft.com/ja-jp/support/plans/">Azure (Basic/Developer/Standard/Professional Direct) サポート</a></u><br/>
+                            　- <u><a href="https://dynamics.microsoft.com/ja-jp/contact-us/">Dynamics 365 (Customer Engagement/Finance and Operations) サポート</a></u><br/>   
+                          </p>
+                          <p>ご迷惑をおかけするかと存じますが、何卒ご理解くださいますようお願いいたします。24 時間サポートのご契約をお持ちのお客様につきましては、上記休業日もサーバー ダウンなどの危機的状況からの回避を目的とした案件 (深刻度 A) に関して対応をさせていただきます。 
+                          </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row column">
             <div class="card card-palette03 card-size3 card-shadow">
                 <div class="row row-middled-flex">
                     <div class="column medium-3 text-center">
