Update link to enterprise support

--- a/index.html
+++ b/index.html
@@ -76,9 +76,7 @@
                         <p>
                         <p>
                             【休業する窓口】<br/>
-                            　- <u><a href="https://www.microsoft.com/ja-jp/services/Microsoft-Unified-Support.aspx">ユニファイド サポート</a></u><br/>
-                            　- <u><a href="https://www.microsoft.com/ja-jp/services/premier.aspx">Premier サポート</a></u><br/>
-                            　- <u><a href="https://www.microsoft.com/ja-jp/services/professional.aspx">プロフェッショナル サポート</a></u><br/>
+                            　- <u><a href="https://www.microsoft.com/ja-jp/services/support.aspx">法人向けサポートサービス (ユニファイド/プレミア/プロフェッショナル サポート)</a></u><br/>
                             　- <u><a href="https://azure.microsoft.com/ja-jp/support/plans/">Azure (Basic/Developer/Standard/Professional Direct) サポート</a></u><br/>
                             　- <u><a href="https://dynamics.microsoft.com/ja-jp/contact-us/">Dynamics 365 (Customer Engagement/Finance and Operations) サポート</a></u><br/>   
                           </p>
