--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
                         <p>
                             【休業する窓口】<br/>
                             　- <u><a href="https://www.microsoft.com/ja-jp/services/support.aspx">法人向けサポートサービス (ユニファイド/プレミア/プロフェッショナル サポート)</a></u><br/>
+                            　- <u><a href="https://partner.microsoft.com/ja-jp/training/technical-presales-deployment-services"></a>クラウド ビジネス相談センター</a></u><br/>
                             　- <u><a href="https://azure.microsoft.com/ja-jp/support/plans/">Azure (Basic/Developer/Standard/Professional Direct) サポート</a></u><br/>
                             　- <u><a href="https://dynamics.microsoft.com/ja-jp/contact-us/">Dynamics 365 (Customer Engagement/Finance and Operations) サポート</a></u><br/>   
                           </p>
