--- a/index.html
+++ b/index.html
@@ -66,12 +66,16 @@
             <div class="card card-palette09 card-size3 card-shadow">
                 <div class="row row-middled-flex">
                     <div class="column medium-3 text-center">
-                        <p class="text-heading4">2020 年 7 月、8 月のサポート窓口休業のお知らせ</p>
+                        <p class="text-heading4">年末年始のサポート窓口休業のお知らせ</p>
                     </div>
                     <div class="column medium-9 left-border-slate08 left-padding-size4">
                         <p>
                             【休業日】<br/>
-                            　- 2020 年 8 月 18 日 (火) 12:00 以降、19 日 (水) 12:00 まで
+                            年末年始の通常サポート窓口は、下記の期間休業となります。<br/>
+                            2020 年 12 月 29 日 (火) 17:30 から 2021 年 1 月 5 日 (火) 9:00 まで
+                        </p>
+                        <p>
+                            翌年の通常サポート開始は、2021 年 1 月 5 日 (火) 9:00 からです。 <br/>
                         <p>
                         <p>
                             【休業する窓口】<br/>
@@ -80,7 +84,9 @@
                             　- <u><a href="https://azure.microsoft.com/ja-jp/support/plans/">Azure (Basic/Developer/Standard/Professional Direct) サポート</a></u><br/>
                             　- <u><a href="https://dynamics.microsoft.com/ja-jp/contact-us/">Dynamics 365 (Customer Engagement/Finance and Operations) サポート</a></u><br/>   
                           </p>
-                          <p>ご迷惑をおかけするかと存じますが、何卒ご理解くださいますようお願いいたします。24 時間サポートのご契約をお持ちのお客様につきましては、上記休業日もサーバー ダウンなどの危機的状況からの回避を目的とした案件 (深刻度 A) に関して対応をさせていただきます。 
+                          <p>
+                            ご迷惑をおかけするかと存じますが、何卒ご理解くださいますようお願いいたします。<br/>
+                            24 時間サポートのご契約をお持ちのお客様につきましては、上記休業日もサーバー ダウンなどの危機的状況からの回避を目的とした案件 (深刻度 A) に関して対応をさせていただきます。 
                           </p>
                     </div>
                 </div>
