Update Japan Windows Commercial Support link

--- a/index.html
+++ b/index.html
@@ -297,10 +297,10 @@
                     </div>
                     <div class="column medium-10">
                         <h3 class="text-heading4">
-                            <a href="https://social.technet.microsoft.com/Forums/ja-Jp/home?forum=Wcsupportja">Japan Windows Commercial Support</a>
+                            <a href="https://jpwinsup.github.io/blog/">Japan Windows Commercial Support</a>
                         </h3>
-                        <p>「Japan Windows Commercial Support」フォーラムは、Windows のプラットフォーム サポート (Windows Server OS や Windows 10 などの Client OS、Network、Active Directory) の技術情報、トラブルシューティング情報、皆様よりご要望・お問い合わせの多い情報について配信します。
-                        </p>
+                        <p>Windows のプラットフォーム サポート (Windows Server OS や Windows 10 などの Client OS、Network、Active Directory) の技術情報、トラブルシューティング情報、皆様よりご要望・お問い合わせの多い情報について配信します。</p>
+                        <p><a href="https://social.technet.microsoft.com/Forums/ja-Jp/home?forum=Wcsupportj">以前のブログ (アーカイブ) はこちら</a></p>
                     </div>
                 </div>
             </div>
