Update URLs for VS and SDK team

--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
                             <a href="https://jpwinsup.github.io/blog/">Japan Windows Commercial Support</a>
                         </h3>
                         <p>Windows のプラットフォーム サポート (Windows Server OS や Windows 10 などの Client OS、Network、Active Directory) の技術情報、トラブルシューティング情報、皆様よりご要望・お問い合わせの多い情報について配信します。</p>
-                        <p><a href="https://social.technet.microsoft.com/Forums/ja-Jp/home?forum=Wcsupportj">以前のブログ (アーカイブ) はこちら</a></p>
+                        <p><a href="https://social.technet.microsoft.com/Forums/ja-Jp/home?forum=Wcsupportj">以前のフォーラム (アーカイブ) はこちら</a></p>
                     </div>
                 </div>
             </div>
@@ -387,10 +387,10 @@
                     </div>
                     <div class="column medium-10">
                         <h3 class="text-heading4">
-                            <a
-                                href="https://social.msdn.microsoft.com/Forums/ja-JP/home?forum=visualstudiosupportteamja">Visual Studio サポート チーム フォーラム</a>
+                            <a href="https://jpdscore.github.io/blog/">Visual Studio サポート チーム</a>
                         </h3>
                         <p>Visual Studio / .NET Framework 技術サポート部門より、よくお問い合わせをいただく情報をサポート トピックとして、皆様よりご要望が多い情報を配信します。</p>
+                        <p><a href="https://social.msdn.microsoft.com/Forums/ja-JP/home?forum=visualstudiosupportteamja">以前のフォーラム (アーカイブ) はこちら</a></p>
                     </div>
                 </div>
             </div>
@@ -401,9 +401,10 @@
                     </div>
                     <div class="column medium-10">
                         <h3 class="text-heading4">
-                            <a href="https://social.msdn.microsoft.com/Forums/ja-JP/home?forum=windowssdksupportteamja">Windows SDK サポート チーム フォーラム</a>
+                            <a href="https://jpdscore.github.io/blog/">Windows SDK サポート チーム</a>
                         </h3>
                         <p>Windows のベース・テクノロジ、セキュリティ、ネットワーク、ユーザー インターフェースに関連する API を利用して、ソフトウェアを開発いただいております技術者の皆様に役立つ情報、ツール、サンプル コード等を随時ご紹介していきます。</p>
+                        <p><a href="https://social.msdn.microsoft.com/Forums/ja-JP/home?forum=windowssdksupportteamja">以前のフォーラム (アーカイブ) はこちら</a></p>
                     </div>
                 </div>
             </div>
